# gst-plugins-bad

./: .gitmodules  configure.ac  meson_options.txt
ext/opencv/: meson.build
ext/wayland/: Makefile.am  gstwaylandsink.c  gstwaylandsink.h  waylandkmspool.c  waylandkmspool.h  waylandpool.c  wlbuffer.c  wlbuffer.h  wldisplay.c  wldisplay.h  wldmabuf.c  wldmabuf.h  wllinuxdmabuf.c  wllinuxdmabuf.h  wlvideoformat.c  wlvideoformat.h  wlwindow.c  wlwindow.h
gst-libs/gst/codecparsers/: gstvc1parser.c
sys/decklink/: gstdecklink.cpp  gstdecklinkaudiosrc.cpp  gstdecklinkvideosink.cpp
sys/dvb/: gstdvbsrc.c
sys/kms/: gstkmssink.c  gstkmssink.h  gstkmsutils.c  meson.build
sys/msdk/: meson.build
tests/examples/: Makefile.am
tests/examples/wayland/: Makefile.am  gst-wayland-demo.c
tests/examples/waylandsink/: meson.build
